Fix services section on mobile

--- a/src/latest-landing/home/OurService/OurService.scss
+++ b/src/latest-landing/home/OurService/OurService.scss
@@ -4,16 +4,22 @@
 .OurService {
     // background: rgba(251, 234, 237, 0.2);
     // padding: 18px 31px;
-    background: #fefbfb;
+    background: #fff;
     scroll-behavior: smooth;
     position: relative;
     // min-height: 100vh;
 
     @media (min-width: 992px) {
         padding: 92px 70px;
+        background: #fefbfb;
     }
 
-    .header {
+    &__header {
+        font-size: 16px;
+        line-height: 19px;
+        padding: 10px 18px;
+        text-transform: uppercase;
+
         @media (min-width: 992px) {
             margin-bottom: 30px;
             margin-top: -19px;
